<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/done"
        android:icon="@drawable/ic_fluent_save_24_selector"
        android:title="@string/done"
        app:iconTint="?android:colorPrimary"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/print"
        android:icon="@drawable/ic_fluent_print_24_selector"
        android:title="@string/print"
        app:iconTint="?android:colorPrimary"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/preview"
        android:icon="@drawable/ic_fluent_eye_show_24_selector"
        android:title="@string/preview"
        app:iconTint="?android:colorPrimary"
        app:showAsAction="ifRoom" />
</menu>